fixed me logo on tablet view

--- a/css/style.scss
+++ b/css/style.scss
@@ -230,7 +230,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .logo_wrap img { width: 70%; }
 
-  .logo_wrap { margin: 0px auto; right: 22%; top: 3.5%; width: 80%; z-index: 400; display: inline-block; padding-top: 5px; }
+  .logo_wrap { margin: 0px auto; right: 22%; top: 2%; width: 80%; z-index: 400; display: inline-block; padding-top: 5px; }
 
   .intro_wrap { margin-top: 50px; }
 
